--- a/app-structure/package.json
+++ b/app-structure/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redesign",
+  "name": "react-structure",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://joeldom.github.io/app",
